Thumbor: don't rewrite host value in logstash messages
Bug: T150734
Change-Id: Ibe1f4f0242ca74d335b575366c033c2282e54b7a

--- a/modules/role/files/logstash/filter-logback.conf
+++ b/modules/role/files/logstash/filter-logback.conf
@@ -3,8 +3,13 @@
 filter {
   if [type] == "logback" {
     # General message cleanup
+    if "thumbor" not in [tags] {
+      mutate {
+        replace => [ "host", "%{HOSTNAME}" ]
+      }
+    }
+
     mutate {
-      replace => [ "host", "%{HOSTNAME}" ]
       add_tag => [ "logback", "es" ]
     }
 
