--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -358,7 +358,14 @@ labs_nova_api_host: &labsnovaapihost "labnet1001.eqiad.wmnet"
 labs_nova_network_host: &labsnovanetworkhost "labnet1001"
 labs_nova_network_ip: &labsnovanetworkip "10.64.20.25"
 status_wiki_host_master: 'wikitech.wikimedia.org'
-profile::openstack::main::cumin_auth_group: cumin_masters
+
+# Cumin
+profile::openstack::main::cumin::auth_group: cumin_masters
+profile::openstack::main::cumin::project_masters: []
+profile::openstack::main::cumin::project_pub_key: undef
+profile::openstack::base::keystone::auth_protocol: http
+profile::openstack::base::keystone::public_port: 5000
+profile::openstack::main::nova::dhcp_domain: 'eqiad.wmflabs'
 
 # By default, don't allow projects to allocate public IPs; this way we can
 # let users have network admin rights, for firewall rules and such, and can
