Phab: Allow aklapper to delete panels on dashboards
As we sometimes see spammers / advertisers (ab)using this Phab functionality.

Change-Id: I5f36910883856bd5b58e78c4afaa30aee5351651

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -306,6 +306,7 @@ groups:
                  * Delete files (e.g. copyright violations)
     members: [aklapper]
     privileges: ['ALL = NOPASSWD: /srv/phab/phabricator/bin/remove destroy F*',
+                 'ALL = NOPASSWD: /srv/phab/phabricator/bin/remove destroy W*',
                  'ALL = NOPASSWD: /srv/phab/phabricator/bin/remove destroy r*',
                  'ALL = NOPASSWD: /srv/phab/phabricator/bin/remove destroy @*',
                  'ALL = NOPASSWD: /srv/phab/phabricator/bin/repository',
