Thumbor: enable STL engine on eqiad and codfw
Bug: T171339
Change-Id: Id033e827541178be6021ee9c05c361105de116ab

--- a/hieradata/role/codfw/thumbor/mediawiki.yaml
+++ b/hieradata/role/codfw/thumbor/mediawiki.yaml
@@ -19,3 +19,5 @@ thumbor::poolcounter_server: 'poolcounter2001.codfw.wmnet'
 
 thumbor::logstash_host: 'logstash.svc.eqiad.wmnet'
 thumbor::logstash_port: 11514
+
+thumbor::stl_support: true
