Template-ise rsync/public.pp hosts allow
Any of the public mirrors for dumps is permitted to access any of the
shares, they are all public after all.  We simply configure them for the
convenience of the mirrors.

This moves the hostnames out to a profile parameter. IP addresses are
left in the module, as well as all the specific contact info.

more to do.

Change-Id: I4ac3ddde00afc8b921b5b8846a8e657c0f3cae23

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -313,30 +313,34 @@ dumps_nfs_clients:
     - stat1006.eqiad.wmnet
 dumps_web_rsync_server_clients:
   ipv4:
-    - dataset1001.wikimedia.org
-    - mwlog1001.eqiad.wmnet
-    - mwlog2001.codfw.wmnet
-    - phab1001.eqiad.wmnet
-    - ms1001.wikimedia.org
-    - stat1005.eqiad.wmnet
-    - stat1006.eqiad.wmnet
-    - sagres.c3sl.ufpr.br
-    - odysseus.fi.muni.cz
-    - odysseus.linux.cz
-    - mirror.fr.wickedway.nl
+    internal:
+      - dataset1001.wikimedia.org
+      - mwlog1001.eqiad.wmnet
+      - mwlog2001.codfw.wmnet
+      - phab1001.eqiad.wmnet
+      - ms1001.wikimedia.org
+      - stat1005.eqiad.wmnet
+      - stat1006.eqiad.wmnet
+    external:
+      - sagres.c3sl.ufpr.br
+      - odysseus.fi.muni.cz
+      - odysseus.linux.cz
+      - mirror.fr.wickedway.nl
 # disabled as of Feb 10 2017, may come back on line later
-#  - wikimedia.wansec.com
-    - ftpmirror.your.org
-    - ec2-174-129-186-231.compute-1.amazonaws.com
-    - ftpmirror-ae0-4.us.your.org
-    - crcdtn01.crc.nd.edu
-    - wmrsync.crc.nd.edu
-    - wikimedia.iconic.vi
-    - poincare.acc.umu.se
-    - wikimedia.bytemark.co.uk
+#    - wikimedia.wansec.com
+      - ftpmirror.your.org
+      - ec2-174-129-186-231.compute-1.amazonaws.com
+      - ftpmirror-ae0-4.us.your.org
+      - crcdtn01.crc.nd.edu
+      - wmrsync.crc.nd.edu
+      - wikimedia.iconic.vi
+      - poincare.acc.umu.se
+      - wikimedia.bytemark.co.uk
   ipv6:
-    - odysseus.ip6.fi.muni.cz
-    - poincare.acc.umu.se
+    internal: []
+    external:
+      - odysseus.ip6.fi.muni.cz
+      - poincare.acc.umu.se
 
 # Schemas names that match this regex
 # will not be produced to the eventlogging-valid-mixed
