elasticsearch: use the logstash LVS endpoint
Bug: T175242
Change-Id: I9cd0651c3f22b400be5a16e4767eb6c637f57233

--- a/hieradata/role/codfw/elasticsearch/cirrus.yaml
+++ b/hieradata/role/codfw/elasticsearch/cirrus.yaml
@@ -54,9 +54,7 @@ profile::elasticsearch::expected_nodes: 36
 profile::elasticsearch::recover_after_nodes: 11
 
 profile::elasticsearch::graylog_hosts:
-  - logstash1001.eqiad.wmnet
-  - logstash1002.eqiad.wmnet
-  - logstash1003.eqiad.wmnet
+  - logstash.svc.eqiad.wmnet
 
 profile::elasticsearch::certificate_name: 'search.svc.codfw.wmnet'
 profile::base::dns_alt_names:             'search.svc.codfw.wmnet'
