striker: switch to LVS endpoint for logstash
Bug: T175242
Change-Id: Ia70be9e021d4e0462ed1e34b8b73e24c7e68713c

--- a/hieradata/role/common/striker/web.yaml
+++ b/hieradata/role/common/striker/web.yaml
@@ -41,7 +41,7 @@ striker::uwsgi::config:
   logging:
     HANDLERS: file logstash
     FILE_FILENAME: /srv/log/striker/striker.log
-    LOGSTASH_HOST: logstash1003.eqiad.wmnet
+    LOGSTASH_HOST: logstash.svc.eqiad.wmnet
     LOGSTASH_PORT: 11514
   static:
     STATIC_ROOT: /srv/deployment/striker/deploy/public_html/static
