mediawiki: switch to LVS endpoint for logstash
Bug: T175242
Change-Id: I20457b3cf705bae0799b2e3b6e47571dff2b156f

--- a/hieradata/common/mediawiki.yaml
+++ b/hieradata/common/mediawiki.yaml
@@ -1,3 +1,1 @@
-# TODO: setup something to loadbalance the logstash hosts rather than relying
-# on a single node in the cluster.
-mediawiki::forward_syslog: "logstash1001.eqiad.wmnet:10514"
+mediawiki::forward_syslog: "logstash.svc.eqiad.wmnet:10514"
