--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -66,7 +66,7 @@ d-i preseed/include_command string  \
         db1059|db109[6-9]|db110[0-6]) echo partman/db.cfg ;; \
         db207[1-9]|db208[0-9]|db209[0-2]) echo partman/db.cfg ;; \
         db[0-8][0-9]|db10[0-8][0-9]|db109[0-5]|db20[0-2][0-9]|db2030|db203[3-9]|db20[4-7][0-9]|dbstore[1-2]00[1-9]|es[1-2]01[1-9]) echo partman/db-no-srv-format.cfg ;; \
-        deploy[12]001) echo partman/raid1-lvm-ext4-srv-noswap.cfg;; \
+        deploy[12]001|furud) echo partman/raid1-lvm-ext4-srv-noswap.cfg;; \
         d-i-test) echo partman/flat.cfg virtual.cfg ;; \
         druid100[1-6]) echo partman/druid-4ssd-raid10.cfg ;; \
         dumpsdata100[12]|labstore100[67]) echo partman/dumpsdata100X.cfg ;; \
