--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -315,3 +315,8 @@ cache_numa_isolate:
 new_mw_appservers:
   __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9])\.eqiad\.wmnet$/
   profile::base::notifications_enabled: '0'
+
+# Temporary since es200[234] currently dont have any role
+es_without_role:
+  __regex: !ruby/regexp /^es200(234])\.codfw\.wmnet$/
+  monitor_screens: false
