screen-monitoring: whitelist all db/es by regex
Some db/es servers did not get covered by the whitelisting
per puppet role because they don't actually use role classes
in site.pp or because their roles had not been added yet.

To avoid having to adjust the list of roles, just whitelist
them all here by regex. Using same regex already used to cover
all db servers for other purposes.

Bug: T165348
Change-Id: I23a9605ce4b2660915929e3519908c86328d985e

--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -316,7 +316,7 @@ new_mw_appservers:
   __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9])\.eqiad\.wmnet$/
   profile::base::notifications_enabled: '0'
 
-# Temporary since es200[234] currently dont have any role
-es_without_role:
-  __regex: !ruby/regexp /^es200([234])\.codfw\.wmnet$/
+# disable screen monitoring, fallback for servers not covered by roles (T165348)
+db_without_role:
+  __regex: !ruby/regexp /^(db|dbstore|es|pc|labsdb)[12]\d\d\d\.(eqiad|codfw)\.wmnet$/
   monitor_screens: false
