hadoop: increase mapreduce history server heap settings
Change-Id: Icab69293c7af83a175b94f6016311cf731743e1f

--- a/hieradata/eqiad/cdh/hadoop.yaml
+++ b/hieradata/eqiad/cdh/hadoop.yaml
@@ -82,7 +82,7 @@ cdh::hadoop::yarn_app_mapreduce_am_resource_mb:          4096      # 2 * 2G
 cdh::hadoop::yarn_app_mapreduce_am_command_opts:         -Xmx3276m  # 0.8 * 2 * 2G
 
 # MapReduce History server (running on Hadoop master nodes)
-cdh::hadoop::mapreduce_history_java_opts:                "-Xms1g -Xmx1g"
+cdh::hadoop::mapreduce_history_java_opts:                "-Xms4096m -Xmx4096m"
 
 # Save 8G for OS and other processes.
 # Memory available for use by Hadoop jobs:  64G - 8G == 56G.
