--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -313,7 +313,7 @@ cache_numa_isolate:
 
 # Temporary to allow a painless host imaging process
 new_mw_appservers:
-  __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9])\.eqiad\.wmnet$/
+  __regex: !ruby/regexp /^mw13(0[7-9]|1[01]|18)\.eqiad\.wmnet$/
   profile::base::notifications_enabled: '0'
 
 # disable screen monitoring, fallback for servers not covered by roles (T165348)
