Add kafka-jumbo to the list of Ganglia clusters
Bug: T175922
Change-Id: I7ef80587f8faca66cdd1603d1d9aca2bce2bdb6e

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -288,6 +288,9 @@ ganglia_clusters:
     sites:
       codfw: []
       eqiad: []
+  kafka-jumbo:
+    description: "Kafka Jumbo Cluster"
+    id: 62
 
 puppetmaster: "puppet"
 active_labstore_host: 'labstore1001'
