role::druid::analytics::worker: split properties into public/private
Bug: T176223
Change-Id: Id080ce20114126a31e8276769cb1bb221799deb0

--- a/hieradata/role/common/druid/analytics/worker.yaml
+++ b/hieradata/role/common/druid/analytics/worker.yaml
@@ -50,8 +50,7 @@ profile::druid::monitoring_enabled: true
 profile::druid::common::properties:
   druid.metadata.storage.type: mysql
   druid.metadata.storage.connector.host: analytics1003.eqiad.wmnet
-  # druid.metadata.storage.connector.password is set in
-  # private/hieradata/eqiad/druid.yaml.
+  # druid.metadata.storage.connector.password is set in the private repo.
   druid.storage.type: hdfs
   druid.request.logging.type: file
   druid.request.logging.dir: /var/log/druid
