hieradata: add sites for kafka_jumbo in ganglia_clusters
Bug: T176223
Change-Id: Ifb3cbb9f02bc0e52d5c76eb6eca6918145d2a70e

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -291,6 +291,8 @@ ganglia_clusters:
   kafka_jumbo:
     description: "Kafka Jumbo Cluster"
     id: 62
+    sites:
+      eqiad: []
 
 puppetmaster: "puppet"
 active_labstore_host: 'labstore1001'
