--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -251,7 +251,7 @@ groups:
               jdlrobson, chelsyx, ovasileva, mtizzoni, panisson, paolotti, ciro,
               flemmerich, mkroetzsch, akrausetud, filippo, pmiazga, faidon,
               piccardi, fdans, eevans, anomie, demon, ladsgroup, musikanimal, joewalsh,
-              kaldari, goransm, ema, dsaez, shiladsen, rho, mirrys]
+              kaldari, goransm, ema, dsaez, shiladsen, rho, mirrys, slaporte]
   analytics-admins:
     gid: 732
     description: Admin access to analytics cluster.
