wmcs: wikireplica_dns: add support for non-wikidb CNAMES
Add code and config to manage creating non-wikidb CNAME aliases to Wiki
Replica shards in Designate.

Bug: T176978
Change-Id: Ic946133b3b5a58b593cc8d63b435c4dde721c644

--- a/modules/openstack2/files/util/wikireplica_dns.yaml
+++ b/modules/openstack2/files/util/wikireplica_dns.yaml
@@ -1,7 +1,7 @@
 ---
 # Wiki Replica DNS configuration
 #
-# Used to generate A records for the given zones and hosts.
+# Used to generate A and CNAME records for the given zones and hosts.
 #
 # zones:
 #   zone_name.:  # trailing . is important!
@@ -9,6 +9,11 @@
 #       - Address 1
 #       - Address 2
 #       - ...
+# cnames:
+#   shard_name:
+#     - hostname 1
+#     - hostname 2
+#     - ...
 #
 # This file is managed by Puppet
 zones:
@@ -45,3 +50,8 @@ zones:
       - 10.64.37.15
     s7:
       - 10.64.37.15
+cnames:
+  s7:
+    - centralauth
+    # [[wikitech:Help:Toolforge/Database#Metadata_database]]
+    - meta
