--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -317,10 +317,8 @@ db_without_role:
   monitor_screens: false
 
 # Disable screen/tmux monitoring for:
-# 1) stat boxes, since researchers/analysts are often doing long running
+#  * stat boxes, since researchers/analysts are often doing long running
 #    data crunching sessions.
-# 2) druid boxes, since on some of them the Analytics team is running
-#    important experiments on real time ingestion like Tranquillity.
 analytics_no_monitor_screens:
-  __regex: !ruby/regexp /^(stat|druid)1\d\d\d\.eqiad\.wmnet$/
+  __regex: !ruby/regexp /^stat1\d\d\d\.eqiad\.wmnet$/
   monitor_screens: false
