Removing schema that no longer exists
PageCreate events have been removed from mediawiki

Bug: T171629
Change-Id: I58daae7ceb1f83d1d3ebbcd1c2c3bfcfea86db3c

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -348,8 +348,7 @@ dumps_web_rsync_server_clients:
 #   * Analytics so we can use it for testing throughput
 #   * CentralNoticeBannerHistory because it can't be inserted into mysql with its array property
 #   * ImageMetrics see T141407, these tables are no longer used and yet some cached code is still sending events
-#   * PageCreation see T171629, data is available in several other ways
-eventlogging_valid_mixed_schema_blacklist: ^(Analytics|CentralNoticeBannerHistory|ImageMetricsLoadingTime|ImageMetricsCorsSupport|PageCreation)$
+eventlogging_valid_mixed_schema_blacklist: ^(Analytics|CentralNoticeBannerHistory|ImageMetricsLoadingTime|ImageMetricsCorsSupport)$
 # Used to specify writer handler for eventlogging processor producer.
 eventlogging_kafka_producer_scheme: "kafka-confluent://"
 
