--- a/hieradata/role/common/mediawiki_maintenance.yaml
+++ b/hieradata/role/common/mediawiki_maintenance.yaml
@@ -17,3 +17,7 @@ hhvm::extra::cli:
       read_timeout: 86400000
 nutcracker::verbosity: "4"
 profile::mariadb::maintenance::ensure: present
+
+# whitelist maintenance servers from screen monitoring
+# many users have permanent sessions here (T165348)
+monitor_screens: false
