screen-monitor: whitelist wdqs hosts
Briefly talked to Smalyshev. tmux is often used on wdqs
hosts for monitoring logs and other things.

Bug: T165348
Change-Id: Ia9d9c3f7d0d3f2865d7290fd8dc438d2c634b066

--- a/hieradata/role/common/wdqs.yaml
+++ b/hieradata/role/common/wdqs.yaml
@@ -12,3 +12,7 @@ cluster: wdqs
 contactgroups: admins,wdqs-admins
 role::lvs::realserver::pools:
   wdqs: {}
+
+# exclude wdqs hosts from screen monitoring
+# they are often used to monitor logs, for example by smalyshev
+monitor_screens: false
