contint: move slave and website roles to profiles
Change-Id: Idb61ccfa9e99d58f59816935c84842790864e3b1

--- a/hieradata/role/common/ci/master.yaml
+++ b/hieradata/role/common/ci/master.yaml
@@ -4,3 +4,9 @@ admin::groups:
   - contint-roots
 cluster: misc
 contactgroups: 'admins,contint'
+
+# Jenkins does not support KEX/MAC
+# T103351
+profile::base::ssh_server_settings:
+  disable_nist_kex: false
+  explicit_macs: false
