--- a/hieradata/role/common/ci/master.yaml
+++ b/hieradata/role/common/ci/master.yaml
@@ -10,3 +10,11 @@ contactgroups: 'admins,contint'
 profile::base::ssh_server_settings:
   disable_nist_kex: false
   explicit_macs: false
+
+zuul::merger:
+    gearman_server: '208.80.154.17'  # contint1001.wikimedia.org
+    gerrit_ssh_key_file: 'ssh/ci/jenkins-bot_gerrit_id_rsa'
+    git_dir: '/srv/zuul/git'
+    git_email: "zuul-merger@%{::hostname}"
+    git_name: 'Wikimedia Zuul Merger'
+    zuul_url: "git://%{::fqdn}"
