Convert zuul::server to a profile
Change-Id: Idea556be79fe346cbf14d3bbec5c30644b6b0703

--- a/hieradata/hosts/contint1001.yaml
+++ b/hieradata/hosts/contint1001.yaml
@@ -2,5 +2,5 @@
 jenkins::service_ensure: unmanaged
 jenkins::service_enable: false
 jenkins::service_monitor: true
-zuul::server::service_ensure: running
-zuul::server::service_enable: true
+profile::zuul::server::service_ensure: running
+profile::zuul::server::service_enable: true
