--- a/hieradata/hosts/contint2001.yaml
+++ b/hieradata/hosts/contint2001.yaml
@@ -2,5 +2,5 @@
 jenkins::service_ensure: unmanaged
 jenkins::service_enable: false
 jenkins::service_monitor: false
-zuul::server::service_ensure: stopped
-zuul::server::service_enable: false
+profile::zuul::server::service_ensure: stopped
+profile::zuul::server::service_enable: false
