--- a/hieradata/role/common/ci/master.yaml
+++ b/hieradata/role/common/ci/master.yaml
@@ -18,3 +18,13 @@ profile::zuul::merger::conf:
     git_email: "zuul-merger@%{::hostname}"
     git_name: 'Wikimedia Zuul Merger'
     zuul_url: "git://%{::fqdn}"
+
+profile::zuul::server::conf:
+    # ferm defaults to ACCEPT on loopback:
+    gearman_server: 127.0.0.1
+    config_git_branch: master
+    gearman_server_start: true
+    # FIXME use a lookup?
+    statsd_host: statsd.eqiad.wmnet
+    url_pattern: 'https://integration.wikimedia.org/ci/job/{job.name}/{build.number}/console'
+    status_url: 'https://integration.wikimedia.org/zuul/'
