contint: move jenkins from role to a profile
Change-Id: Idc6b8dc97f5662e3c8ae9bc8fb5d0b6baef33327

--- a/hieradata/hosts/contint2001.yaml
+++ b/hieradata/hosts/contint2001.yaml
@@ -1,6 +1,6 @@
 # master is contint1001
-jenkins::service_ensure: unmanaged
-jenkins::service_enable: false
-jenkins::service_monitor: false
+profile::ci::jenkins::service_ensure: unmanaged
+profile::ci::jenkins::service_enable: false
+profile::ci::jenkins::service_monitor: false
 profile::zuul::server::service_ensure: stopped
 profile::zuul::server::service_enable: false
