profile::ci::docker: fix exec in production
Also introduce a hiera global 'jenkins_agent_username', as references to
this user are spread across different profiles and roles. I think this
pattern is preferrable to parameter classes.

Change-Id: I7918f5c83371d3e43aa44f06c7566e660e32de71

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -564,3 +564,6 @@ udp2log_aggregator: "udplog:8420"
 
 tcpircbot_host: 'icinga.wikimedia.org'
 tcpircbot_port: 9200
+
+# User for jenkins master-slave connections
+jenkins_agent_username: 'jenkins-slave'
