--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -132,3 +132,6 @@ profile::diffscan::ipranges:
   - 208.80.152.0/22
 profile::diffscan::emailto: root@wikimedia.org
 profile::diffscan::groupname: Labs-to-public-v4
+
+# User for jenkins master-slave connections
+jenkins_agent_username: 'jenkins-deploy'
