check_prometheus_metrics.cfg: correct command name
Bug: T175923
Change-Id: Ia9c5314dd53c57e55857b22a1debbbb2c9e89eae

--- a/modules/nagios_common/files/check_commands/check_prometheus_metric.cfg
+++ b/modules/nagios_common/files/check_commands/check_prometheus_metric.cfg
@@ -1,10 +1,10 @@
 define command {
     command_name check_prometheus
-    command_line $USER1$/check_prometheus_metric.sh -H '$ARG1$' -q '$ARG2$' -w '$ARG3$' -c '$ARG4$' -n '$ARG5$' -m '$ARG6$'
+    command_line $USER1$/check_prometheus_metric -H '$ARG1$' -q '$ARG2$' -w '$ARG3$' -c '$ARG4$' -n '$ARG5$' -m '$ARG6$'
 }
 
 # check_prometheus, treating a NaN result as ok
 define command {
     command_name check_prometheus_nan_ok
-    command_line $USER1$/check_prometheus_metric.sh -H '$ARG1$' -q '$ARG2$' -w '$ARG3$' -c '$ARG4$' -n '$ARG5$' -m '$ARG6$' -O
+    command_line $USER1$/check_prometheus_metric -H '$ARG1$' -q '$ARG2$' -w '$ARG3$' -c '$ARG4$' -n '$ARG5$' -m '$ARG6$' -O
 }
