hieradata: use empty list for remote_syslog
Bug: T136312
Change-Id: I9e74f1da2ce904f708b672b3eab6b0d93e89dcaf

--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -26,7 +26,7 @@ profile::openstack::main::observer_password: 'Fs6Dq2RtG8KwmM2Z'
 
 # Additional base overrides
 standard::has_admin: false
-profile::base::remote_syslog: false
+profile::base::remote_syslog: []
 
 # Labs statsd instance
 statsd: labmon1001.eqiad.wmnet:8125
