--- a/hieradata/role/common/kafka/simple/broker.yaml
+++ b/hieradata/role/common/kafka/simple/broker.yaml
@@ -1,5 +1,6 @@
 kafka_cluster_name: simple
 
+profile::kafka::broker::acl_auth_provider: undef
 profile::kafka::broker::prometheus_monitoring_enabled: false
 profile::kafka::broker::log_dirs: [/srv/kafka/data]
 profile::kafka::broker::plaintext: true
