rsyslog: bump maximum TCP sessions
Bug: T136312
Change-Id: Ib9ab9386edb86d5438826a6e586a4c6527c5bc32

--- a/modules/rsyslog/templates/receiver.erb.conf
+++ b/modules/rsyslog/templates/receiver.erb.conf
@@ -6,6 +6,7 @@ $DefaultNetstreamDriverKeyFile /etc/rsyslog-receiver/ssl/server.key
 
 # TCP configuration
 $ModLoad imtcp
+$InputTCPMaxSessions 4096
 # Allow clients presenting a valid Puppet CA-signed cert.
 # http://www.rsyslog.com/doc/v8-stable/concepts/ns_gtls.html
 $InputTCPServerStreamDriverAuthMode x509/certvalid
