screen-monitor: whitelist deployment servers
screen sessions are common on deployment servers, let
deployers have them and whitelist servers using this role.

Bug: T165348
Change-Id: Idad2b8029c53d15e5a971c6a291c819317595880

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -17,6 +17,9 @@ admin::groups:
   - analytics-admins
   - gerrit-root
 
+# screen sessions are common on deployment servers (T165348)
+monitor_screens: false
+
 # Newer git version, not needed on stretch - T140927
 apt::use_experimental: true
 
@@ -175,3 +178,4 @@ scap::sources:
     repository: search/MjoLniR
   statsv/statsv:
     repository: analytics/statsv
+
