--- a/hieradata/common/scap/dsh.yaml
+++ b/hieradata/common/scap/dsh.yaml
@@ -94,3 +94,17 @@ scap::dsh::groups:
   webperf:
     hosts:
       - hafnium.eqiad.wmnet
+  maps:
+    hosts:
+      - maps1001.eqiad.wmnet
+      - maps1002.eqiad.wmnet
+      - maps1003.eqiad.wmnet
+      - maps1004.eqiad.wmnet
+      - maps2001.codfw.wmnet
+      - maps2002.codfw.wmnet
+      - maps2003.codfw.wmnet
+      - maps2004.codfw.wmnet
+      - maps-test2001.codfw.wmnet
+      - maps-test2002.codfw.wmnet
+      - maps-test2003.codfw.wmnet
+      - maps-test2004.codfw.wmnet
