--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Compiled Python files are useless
 *.pyc
 
-/private/
+/private
 
 # Automatically generated documentation and related support path:
 /doc/*
