logstash: DSH groups based on conftool
This reduces duplication a bit.

Change-Id: I01c1b4048c2626e61dd4f1499d864c862536630d

--- a/hieradata/common/scap/dsh.yaml
+++ b/hieradata/common/scap/dsh.yaml
@@ -84,9 +84,7 @@ scap::dsh::groups:
       - netmon1002.wikimedia.org
   logstash:
     hosts:
-      - logstash1001.eqiad.wmnet
-      - logstash1002.eqiad.wmnet
-      - logstash1003.eqiad.wmnet
+      - {'cluster': 'logstash', 'service': 'logstash'}
   relforge:
     hosts:
       - relforge1001.eqiad.wmnet
