--- a/hieradata/role/common/releases.yaml
+++ b/hieradata/role/common/releases.yaml
@@ -5,3 +5,5 @@ admin::groups:
 profile::releases::mediawiki::sitename: 'releases.wikimedia.org'
 profile::releases::mediawiki::sitename_jenkins: 'releases-jenkins.wikimedia.org'
 profile::releases::mediawiki::server_admin: 'noc@wikimedia.org'
+profile::releases::mediawiki::prefix: ''
+profile::releases::mediawiki::http_port: '8080'
