scap::dsh: Create the parsoid-canaries group
Add a parsoid-canaries group

Bug: T177374
Change-Id: I7c48d715d3ef1cbdd33d9ac93c1e126083d8cfd9

--- a/conftool-data/node/codfw.yaml
+++ b/conftool-data/node/codfw.yaml
@@ -166,6 +166,7 @@ codfw:
     mw2017.codfw.wmnet: [apache2]
     mw2099.codfw.wmnet: [apache2]
   parsoid:
+    # Do not forget to update $wgLinterSubmitterWhitelist in operations/mediawiki-config
     wtp2001.codfw.wmnet: [parsoid]
     wtp2002.codfw.wmnet: [parsoid]
     wtp2003.codfw.wmnet: [parsoid]
