cassandra: move machines from restbase to restbase_ng cluster
6 machines were repurposed from RESTBase, and deployed as a new Cassandra
cluster, yet all continue to use the same cluster name (aka 'restbase').
This changeset renames the cluster for these 6 machines to 'restbase_ng'.

Bug: T177501
Change-Id: I83def14e6ce6f83e9ba3874d2ac5d3748f60e064

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -288,6 +288,12 @@ ganglia_clusters:
     id: 62
     sites:
       eqiad: []
+  restbase_ng:
+    description: "Restbase (next-gen w/ Cassandra 3.x)"
+    id: 63
+    sites:
+      codfw: []
+      eqiad: []
 
 puppetmaster: "puppet"
 active_labstore_host: 'labstore1001'
