cassandra: move machines from restbase to restbase_ng cluster
6 machines were repurposed from RESTBase, and deployed as a new Cassandra
cluster, yet all continue to use the same cluster name (aka 'restbase').
This changeset renames the cluster for these 6 machines to 'restbase_ng'.

Bug: T177501
Change-Id: I83def14e6ce6f83e9ba3874d2ac5d3748f60e064

--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -227,9 +227,6 @@ eqiad:
     mw1298.eqiad.wmnet: [apache2,nginx]
   restbase:
     restbase1007.eqiad.wmnet: [restbase, cassandra]
-    restbase1008.eqiad.wmnet: [restbase, cassandra]
-    restbase1009.eqiad.wmnet: [restbase, cassandra]
-    restbase1010.eqiad.wmnet: [restbase, cassandra]
     restbase1011.eqiad.wmnet: [restbase, cassandra]
     restbase1012.eqiad.wmnet: [restbase, cassandra]
     restbase1013.eqiad.wmnet: [restbase, cassandra]
@@ -238,6 +235,10 @@ eqiad:
     restbase1016.eqiad.wmnet: [restbase, cassandra]
     restbase1017.eqiad.wmnet: [restbase, cassandra]
     restbase1018.eqiad.wmnet: [restbase, cassandra]
+  restbase_ng:
+    restbase1008.eqiad.wmnet: [restbase, cassandra]
+    restbase1009.eqiad.wmnet: [restbase, cassandra]
+    restbase1010.eqiad.wmnet: [restbase, cassandra]
   maps:
     maps1001.eqiad.wmnet: [kartotherian]
     maps1002.eqiad.wmnet: [kartotherian]
