--- a/conftool-data/node/codfw.yaml
+++ b/conftool-data/node/codfw.yaml
@@ -262,11 +262,8 @@ codfw:
     elastic2035.codfw.wmnet: [elasticsearch, elasticsearch-ssl]
     elastic2036.codfw.wmnet: [elasticsearch, elasticsearch-ssl]
   restbase:
-    restbase2001.codfw.wmnet: [restbase, cassandra]
     restbase2002.codfw.wmnet: [restbase, cassandra]
-    restbase2003.codfw.wmnet: [restbase, cassandra]
     restbase2004.codfw.wmnet: [restbase, cassandra]
-    restbase2005.codfw.wmnet: [restbase, cassandra]
     restbase2006.codfw.wmnet: [restbase, cassandra]
     restbase2007.codfw.wmnet: [restbase, cassandra]
     restbase2008.codfw.wmnet: [restbase, cassandra]
@@ -274,6 +271,10 @@ codfw:
     restbase2010.codfw.wmnet: [restbase, cassandra]
     restbase2011.codfw.wmnet: [restbase, cassandra]
     restbase2012.codfw.wmnet: [restbase, cassandra]
+  restbase_ng:
+    restbase2001.codfw.wmnet: [restbase, cassandra]
+    restbase2003.codfw.wmnet: [restbase, cassandra]
+    restbase2005.codfw.wmnet: [restbase, cassandra]
   sca:
     sca2003.codfw.wmnet: [zotero]
     sca2004.codfw.wmnet: [zotero]
