profile::cache::ssl::unified: move from role, refactor
role::cache::ssl::unified had a big if $realm guard; refactor it to be
slightly more general by making the if guards depending on the features
we want to enable.

While this refactoring is far from complete, it lays the path to have
SSL monitoring in beta as well.

Change-Id: Ib34c2373659d12b16753a142c2eb6265441d9be7

--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -60,6 +60,12 @@ cache::upload::nodes:
 profile::cache::base::zero_site: 'https://zero.wikimedia.beta.wmflabs.org'
 profile::cache::base::purge_host_only_upload_re: '^(upload|maps)\.beta\.wmflabs\.org$'
 profile::cache::base::purge_host_not_upload_re: '^(?!(upload|maps)\.beta\.wmflabs\.org)'
+# Profile::cache::ssl::unified
+profile::cache::ssl::unified::monitoring: false
+profile::cache::ssl::unified::letsencrypt: true
+profile::cache::ssl::unified::le_server_name: 'beta.wmflabs.org'
+profile::cache::ssl::unified::le_subjects: ['beta.wmflabs.org']
+
 role::cache::upload::upload_domain: 'upload.beta.wmflabs.org'
 role::cache::upload::maps_domain: 'maps.beta.wmflabs.org'
 role::cache::text::static_host: 'deployment.wikimedia.beta.wmflabs.org'
