role::cache::text: move to role/profile
Please note that this is not complete, as we still have deep class
inclusions and implicit or explicit hiera lookups all over the place;
these will be fixed once we moved all the cache roles to the
role/profile structure.

Change-Id: Ic8f219a289e5c3cf256bdd9e78f1dd7b5ab1f754

--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -68,9 +68,9 @@ profile::cache::ssl::unified::le_subjects: ['beta.wmflabs.org']
 
 role::cache::upload::upload_domain: 'upload.beta.wmflabs.org'
 role::cache::upload::maps_domain: 'maps.beta.wmflabs.org'
-role::cache::text::static_host: 'deployment.wikimedia.beta.wmflabs.org'
-role::cache::text::shortener_domain: 'w-beta.wmflabs.org'
-role::cache::text::top_domain: 'beta.wmflabs.org'
+profile::cache::text::static_host: 'deployment.wikimedia.beta.wmflabs.org'
+profile::cache::text::shortener_domain: 'w-beta.wmflabs.org'
+profile::cache::text::top_domain: 'beta.wmflabs.org'
 role::cache::base::storage_parts:
   - vdb
   - vdb
