prometheus: re-introduce IPVS aggregation rule
We have removed a bunch of IPVS aggregation rules in
bcdade7c8265b763d56d731d2c8b9d41d97dc9e0, but one of those is still
needed by https://grafana.wikimedia.org/dashboard/db/load-balancers.

Change-Id: I89d647b32b2a5f51743b1e4a6db8aa99924a1326

--- a/modules/role/files/prometheus/rules_ops.conf
+++ b/modules/role/files/prometheus/rules_ops.conf
@@ -170,5 +170,6 @@ instance_row:infeedLoadValue:max = max by (instance, row) (infeedLoadValue)
 instance_row:infeedLoadValue:min = min by (instance, row) (infeedLoadValue)
 
 # IPVS aggregation
+instance:node_ipvs_backend_connections_active:rate5m = sum by (instance) (rate(node_ipvs_backend_connections_active[5m]))
 local_port_local_address_instance:node_ipvs_backend_connections_active:rate5m = sum by (local_port,local_address,instance) (rate(node_ipvs_backend_connections_active[5m]))
 local_port_local_address_instance:node_ipvs_backend_connections_inactive:rate5m = sum by (local_port,local_address,instance) (rate(node_ipvs_backend_connections_inactive[5m]))
