logstash: update logstash_syslog common hiera parameter to point to LVS.
Note that this is the parameter actually used by mediawiki.

Bug: T175242
Change-Id: Ibd71bfd33d413f1fbe4cca74074f61f3c840acd0

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -557,9 +557,8 @@ conftool_prefix: "/conftool/v1"
 
 
 # Logging: logstash, udp2log
-# TODO: setup something to loadbalance the logstash hosts rather than relying
 # on a single node in the cluster.
-logstash_syslog: "logstash1001.eqiad.wmnet:10514"
+logstash_syslog: "logstash.svc.eqiad.wmnet:10514"
 udp2log_aggregator: "udplog:8420"
 
 tcpircbot_host: 'icinga.wikimedia.org'
