--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -66,8 +66,8 @@ profile::cache::ssl::unified::letsencrypt: true
 profile::cache::ssl::unified::le_server_name: 'beta.wmflabs.org'
 profile::cache::ssl::unified::le_subjects: ['beta.wmflabs.org']
 
-role::cache::upload::upload_domain: 'upload.beta.wmflabs.org'
-role::cache::upload::maps_domain: 'maps.beta.wmflabs.org'
+profile::cache::upload::upload_domain: 'upload.beta.wmflabs.org'
+profile::cache::upload::maps_domain: 'maps.beta.wmflabs.org'
 profile::cache::text::static_host: 'deployment.wikimedia.beta.wmflabs.org'
 profile::cache::text::shortener_domain: 'w-beta.wmflabs.org'
 profile::cache::text::top_domain: 'beta.wmflabs.org'
