profile::cache::base: explicitly declare varnish classes
These classes were imported into the manifest by a require inside
varnish::common::vcl, adding a good level of indirection and mistery to
what we were doing. Explicitly declare them in profile::cache::base as
our style guide suggests.

Change-Id: I371b5e4dc885bb8bd547660d8beb534413228085

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -157,7 +157,7 @@ profile::memcached::size: '3000'
 profile::memcached::extended_options:
   - 'slab_reassign'
 profile::memcached::port: '11211'
-"varnish::packages::version": latest
+"profile::cache::base::packages_version": latest
 "keyholder::trusted_groups":
    - wikidev
 "profile::base::core_dump_pattern": '/data/project/cores/%{::hostname}-core.%h.%e.%p.%t'
