--- a/hieradata/hosts/mwlog2001.yaml
+++ b/hieradata/hosts/mwlog2001.yaml
@@ -4,3 +4,4 @@ admin::groups:
   - mw-log-readers
 role::logging::mediawiki::udp2log::rsync_slow_parse: false
 role::logging::mediawiki::udp2log::forward_messages: false
+profile::base::check_smart: true
