--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -57,6 +57,9 @@ cache::text::nodes:
 cache::upload::nodes:
     eqiad:
       - 'deployment-cache-upload04.deployment-prep.eqiad.wmflabs'
+cache::misc::nodes:
+    eqiad:
+      - 'deployment-cache-misc04.deployment-prep.eqiad.wmflabs'
 profile::cache::base::zero_site: 'https://zero.wikimedia.beta.wmflabs.org'
 profile::cache::base::purge_host_only_upload_re: '^(upload|maps)\.beta\.wmflabs\.org$'
 profile::cache::base::purge_host_not_upload_re: '^(?!(upload|maps)\.beta\.wmflabs\.org)'
