--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -234,7 +234,7 @@ groups:
                  Those files are group readable by the analytics-privatedata-users group.
     members: [dartar, milimetric, dfoy, aude, jforrester, nithum, shrlak,
               halfak, dr0ptp4kt, bearloga, elukey, gwicke, ppchelko,
-              nuria, otto, deskana, arnad, jgonsior,
+              nuria, otto, deskana, arnad, jgonsior, jgreen
               bsitzmann, dbrant, nettrom, leila,
               ezachte, mforns, reedy, west1, phuedx, awight,
               joal, jamesur, akosiaris, jkatz, madhuvishy,
