maps/icinga: add missing hostgroup maps-test-vectortiles_codfw
follow-up to I004790c3528cf4e3a5 which introduced an Icinga
config error:

Error: Could not find any hostgroup matching
'maps-test-vectortiles_codfw'

which kept Icinga from reloading config changes, as reported
by Chase.

Change-Id: If9a5e153d66b25c735e5b120aa6ed771be005ed3

--- a/hieradata/common/monitoring.yaml
+++ b/hieradata/common/monitoring.yaml
@@ -126,6 +126,8 @@ monitoring::groups:
     description: codfw maps servers
   maps-test_codfw:
     description: codfw maps test servers
+  maps-test-vectortiles_codfw:
+    description: codfw maps test servers for vector tiles
 
 # MediaWiki
   appserver_eqiad:
