maps: introduce the base requirements for vector tiles and cleartables
* database name change to reflect the usual practice
* new OSM update script
* python prerequisites for meddo

Bug: T157613
Change-Id: I8bc30fa066288125a4ccf20a91d58ac99e2bf04d

--- a/hieradata/role/codfw/maps/test/vectortiles_master.yaml
+++ b/hieradata/role/codfw/maps/test/vectortiles_master.yaml
@@ -16,3 +16,4 @@ profile::maps::osm_master::slaves:
 profile::maps::osm_master::planet_sync_period: 'minute'
 profile::maps::osm_master::planet_sync_hour:   '*'
 profile::maps::osm_master::planet_sync_minute: '*'
+profile::maps::osm_master::cleartables: true
