--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -317,3 +317,7 @@ eqiad:
   kubernetes:
     argon.eqiad.wmnet: [kubemaster]
     chlorine.eqiad.wmnet: [kubemaster]
+  druid-public:
+    druid1004.eqiad.wmnet: [druid-public-broker, druid-public-overlord]
+    druid1005.eqiad.wmnet: [druid-public-broker, druid-public-overlord]
+    druid1006.eqiad.wmnet: [druid-public-broker, druid-public-overlord]
