LVS for druid-public broker
Druid public cluster needs to be accessible from AQS to broker for querying.

Bug: T176223
Change-Id: I4b2e048d7ba048eede26f1d2688846faab84dcdb

--- a/conftool-data/discovery/services.yaml
+++ b/conftool-data/discovery/services.yaml
@@ -21,3 +21,4 @@ trendingedits: [eqiad, codfw]
 "recommendation-api": [eqiad, codfw]
 wdqs: [eqiad, codfw]
 zotero: [eqiad, codfw]
+druid-public-broker: [eqiad]
