--- a/conftool-data/service/services.yaml
+++ b/conftool-data/service/services.yaml
@@ -263,3 +263,12 @@ logstash:
     default_values:
       pooled: 'no'
       weight: 10
+druid-public:
+  druid-public-broker:
+    port: 8082
+    datacenters:
+    - eqiad
+    default_values:
+      pooled: 'yes'
+      weight: 10
+
